--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Axel Rodriguez # the main title
+title: Axel Gabriel Rodriguez Zarate # the main title
 
 tagline: axel.rodriguez@cimat.mx # it will display as the sub-title
 
